--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 	"require-dev": {
 		"phpstan/phpstan": "^0.11",
 		"phpstan/phpstan-strict-rules": "^0.11",
-		"phpunit/phpunit": "^7.5",
+		"phpunit/phpunit": "^8.0",
 		"symplify/easy-coding-standard": "^5.4"
 	},
 	"autoload": {
@@ -30,6 +30,6 @@
 		],
 		"check-cs": "vendor/bin/ecs check src tests",
 		"fix-cs": "vendor/bin/ecs check src tests --fix",
-		"phpstan": "vendor/bin/phpstan analyse src tests --level max --configuration phpstan.neon"
+		"phpstan": "vendor/binO"
 	}
 }
