--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,14 @@ language: php
 
 matrix:
   include:
+    - php: 7.1
+      env:
+        - PHPUNIT_FLAGS="--coverage-clover coverage.xml"
+        - COMPOSER_FLAGS=""
+    - php: 7.1
+      env:
+        - PHPSTAN=true
+        - COMPOSER_FLAGS=""
     - php: 7.2
       env:
         - PHPUNIT_FLAGS="--coverage-clover coverage.xml"
