--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,12 @@
 	"keywords": ["apicart", "php", "search", "tokenizer", "query", "AST", "parser", "filters"],
 	"license": "MIT",
 	"require": {
-		"php": ">=7.2"
+		"php": "^7.1"
 	},
 	"require-dev": {
 		"phpstan/phpstan": "^0.11",
 		"phpstan/phpstan-strict-rules": "^0.11",
-		"phpunit/phpunit": "^8.0",
+		"phpunit/phpunit": "^7.5|^8.0",
 		"symplify/easy-coding-standard": "^5.4"
 	},
 	"autoload": {
@@ -22,14 +22,17 @@
 			"Apicart\\FQL\\Tests\\": "tests"
 		}
 	},
+	"config": {
+		"sort-packages": true
+	},
 	"scripts": {
 		"complete-check": [
-			"phpunit",
+			"@phpunit",
 			"@check-cs",
 			"@phpstan"
 		],
+		"phpunit": "vendor/bin/phpunit --do-not-cache-result",
 		"check-cs": "vendor/bin/ecs check src tests",
-		"fix-cs": "vendor/bin/ecs check src tests --fix",
 		"phpstan": "vendor/bin/phpstan analyse src tests --level max --configuration phpstan.neon"
 	}
 }
