--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,7 @@ charset = utf-8
 trim_trailing_whitespace = true
 
 [*.{php,php}]
-indent_style = tab
+indent_style = space
 indent_size = 4
 
 [*.{yml,yaml}]
