--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
 		"php": "^7.1"
 	},
 	"require-dev": {
-		"phpstan/phpstan": "^0.11",
-		"phpstan/phpstan-strict-rules": "^0.11",
+		"phpstan/phpstan": "^0.12",
+		"phpstan/phpstan-strict-rules": "^0.12",
 		"phpunit/phpunit": "^7.5|^8.0",
 		"symplify/easy-coding-standard": "^5.4"
 	},
@@ -33,6 +33,6 @@
 		],
 		"phpunit": "vendor/bin/phpunit --do-not-cache-result",
 		"check-cs": "vendor/bin/ecs check src tests",
-		"phpstan": "vendor/bin/phpstan analyse src tests --level max --configuration phpstan.neon"
+		"phpstan": "vendor/bin/phpstan.phar analyse src tests --level max --configuration phpstan.neon"
 	}
 }
