--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,11 +2,12 @@ includes:
 	- vendor/phpstan/phpstan-strict-rules/rules.neon
 
 parameters:
+	checkMissingIterableValueType: false
 	excludes_analyse:
 		- %rootDir%/temp/*
 
 	ignoreErrors:
-		- '#^Method [a-zA-Z0-9\\]+::findBy[a-zA-Z]+\(\) should return [a-zA-Z0-9\\]+|null but returns object|null.#'
+		- '#^Method [a-zA-Z0-9\\]+::findBy[a-zA-Z]+\(\) should return [a-zA-Z0-9\\]+\|null but returns object\|null.#'
 		- '#^Variable method call on#'
 		- '#^Call to an undefined method PHPUnit_Framework_MockObject_MockObject::extract\(\)\.$#'
 
