--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"keywords": ["apicart", "php", "search", "tokenizer", "query", "AST", "parser", "filters"],
 	"license": "MIT",
 	"require": {
-		"php": "^7.1"
+		"php": "^7.1|^8.0"
 	},
 	"require-dev": {
 		"phpstan/phpstan": "^0.12",
