--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
 	"require-dev": {
 		"phpstan/phpstan": "^0.12",
 		"phpstan/phpstan-strict-rules": "^0.12",
-		"phpunit/phpunit": "^7.5|^8.0",
-		"symplify/easy-coding-standard": "^5.4"
+		"phpunit/phpunit": "^7.5|^8.0"
 	},
 	"autoload": {
 		"psr-4": {
